@@ -5,6 +5,20 @@
 # For license terms see the file COPYING.txt.
 #
 
+
+# --- patch sys.path to make sure 'import roundup' finds correct version
+import sys
+import os.path as osp
+
+thisdir = osp.dirname(osp.abspath(__file__))
+rootdir = osp.dirname(osp.dirname(thisdir))
+if (osp.exists(thisdir + '/__init__.py') and
+        osp.exists(rootdir + '/roundup/__init__.py')):
+    # the script is located inside roundup source code
+    sys.path.insert(0, rootdir)
+# --/
+
+
 import base64, getopt, os, sys, socket, urllib
 from roundup.xmlrpc import translate
 from roundup.xmlrpc import RoundupInstance
